# ENG_AirFlow

./: .gitignore  .pre-commit-config.yaml  README.md  SUMMARY.md  pyproject.toml  requirements.txt
.github/workflows/: api_test.yml  test.yml
docker_airflow/: Dockerfile  docker-compose.yaml  docker_postgres_init_dl.sql  docker_postgres_init_dw.sql
docker_airflow/.airflow/dags/: 01.py  01_umbrella.py  conect_db.py  extract_and_load.py
docker_airflow/.airflow/scripts/: list_tikers.py  request_get.py  transformeted.py
docker_airflow/.airflow/sql/: backup_to_csv_dl.sql  cria_tabela_dl.sql  cria_tabela_dw.sql  deleta_dados_duplicados_dl.sql  deleta_dados_tabela_dw.sql  inseri_dados_tabela_dl.sql  inseri_dados_tabela_dw.sql  ultimos_dados_inseridos_dl.sql
docker_airflow/.postgres/transfer/: dadosColetados.csv  moedas.csv  moedas_unicos.csv
docker_airflow/app/: app.py  requirements.txt
docker_airflow/app/templates/: base.htm  index.html
test/: test_api.py
